src/test/deca/context/valid/negative_pars_01.deca
// Description:
//    Programme minimaliste utilisant - avec un int.
//
// Resultats:
//      -1
//
// Historique:
//    cree le 04/01/2023

{

        int a = -1;
        println(a);

}
