src/test/deca/context/invalid/objet/call_metho_nonclass.deca
// Description:
//    Appel de methode avec un int.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 04/01/2023

class A{
    int getX(){

    }
}

{
    A a = new A();
    int m;
    m.getX();
}

